syntax = "proto3";

package protobuff;

message NamesPb {
    string firstName = 1;
    string lastName = 2;
    string canonicalName =3;
}
